<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:src="@mipmap/ic_calibration" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Secondo.TextAppearance.Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/calibration_title_text"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Secondo.TextAppearance.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/calibration_description_text"
        android:textAlignment="textStart" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/start_calibration"
        style="@style/Secondo.Button.black"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/calibration_start" />

</RelativeLayout>
